# legacy-coderetreat-trivia

python3/: .gitignore  .pre-commit-config.yaml  Player.py  README.md  i18n.py  pyproject.toml  test_trivia.py  test_trivia.test_adding_player.approved.txt  trivia.py
python3/tests/: test_trivia.py  test_trivia.test_adding_player.approved.txt  test_trivia.test_create_rock_question.approved.txt  test_trivia.test_init.approved.txt  test_trivia.test_roll_in_penalty_box.approved.txt  test_trivia.test_roll_in_penalty_box_get_out.approved.txt  test_trivia.test_was_correctly_answered.approved.txt  test_trivia.test_was_correctly_answered_after_wrong_answer_out_of_penalty_box.approved.txt  test_trivia.test_wrong_answer.approved.txt
