[tool.poetry]
name = "python3"
version = "0.1.0"
description = ""
authors = ["Gergely Halacsy <ghalacsy@diligent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
approvaltests = "^14.2.0"
pytest-approvaltests = "^0.2.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
